gestion des erreurs

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,14 @@
         </div>
         
         <div class="option-group">
+            <label>Deletion Condition:</label>
+            <div class="checkbox-container">
+                <input type="checkbox" id="burn-after-reading-checkbox">
+                <label for="burn-after-reading-checkbox">Burn after reading</label>
+            </div>
+        </div>
+        
+        <div class="option-group">
             <label for="password-input">Password (optional):</label>
             <input type="password" id="password-input" placeholder="Leave blank for a public paste">
         </div>
