--- a/templates/404.html
+++ b/templates/404.html
@@ -3,9 +3,10 @@
 {% block title %}404 Not Found{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>404 - Page Not Found</h1>
+<div class="has-text-centered">
+    <h1 class="title is-1">404</h1>
+    <p class="subtitle is-3">Page Not Found</p>
     <p>The paste you are looking for does not exist or has expired.</p>
-    <a href="{{ url_for('index') }}" class="button">Create a new paste</a>
+    <a href="{{ url_for('index') }}" class="button is-primary mt-4">Create a new paste</a>
 </div>
 {% endblock %}
