--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,24 @@
                 </div>
             </div>
         </div>
+
+        <div class="column">
+            <div class="field">
+                <label for="language-select" class="label">Language:</label>
+                <div class="control">
+                    <div class="select is-fullwidth">
+                        <select id="language-select">
+                            <option value="text" selected>Plain Text</option>
+                            <option value="auto">Auto-detect</option>
+                            <option value="python">Python</option>
+                            <option value="javascript">JavaScript</option>
+                            <option value="html">HTML</option>
+                            <option value="css">CSS</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
         
         <div class="column">
             <div class="field">
