--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.svg') }}" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body data-paste-id="{{ paste_id or '' }}">
+<body data-paste-id="{{ paste_id or '' }}" data-random-password-length="{{ random_password_length or 15 }}">
     <main>
         <div class="container">
             <header class="has-text-centered mb-5">
