--- a/templates/about.html
+++ b/templates/about.html
@@ -14,5 +14,7 @@
         <li><strong>Self-Destructing Pastes:</strong> Set an expiration time or a maximum number of reads for your pastes.</li>
         <li><strong>Syntax Highlighting:</strong> Automatic language detection and syntax highlighting for code snippets.</li>
     </ul>
+    <h3 class="title is-3">Disclaimer of Liability</h3>
+    <p>The operator of this service is not responsible for the content of any paste created by users. The responsibility for the content lies solely with the user who created the paste. Users of this service agree not to submit any content that is illegal, defamatory, or malicious.</p>
 </div>
 {% endblock %}
