--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>All encryption is done in your browser. The server never sees your secrets.</p>
+            <p>The service operator is not responsible for user-submitted content. See <a href="/about">about page</a> for details.</p>
             <p>
                 <a href="https://github.com/ClementLG/IronPaste" target="_blank" rel="noopener noreferrer" class="icon is-large" aria-label="GitHub Repository">
                     <i class="fab fa-github fa-2x"></i>
