adding a warning if no password is set

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,10 @@
         </div>
     </div>
 
+    <div id="no-password-warning" class="notification is-warning is-light is-hidden">
+        <strong>Warning:</strong> You have not set a password. The content will be saved in plain text and will not be encrypted.
+    </div>
+
     <div class="field">
         <div class="control">
             <button id="create-btn" class="button is-primary is-fullwidth">Create Paste</button>
